Ignore Office temp files and LinkedIn media folder

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ __pycache__/
 
 # --- Logs ---
 *.log
+# --- Office temp files ---
+~$*.*
+*.tmp
+
+# --- Local portfolio media (keep in LinkedIn only) ---
+aws-deploy/linkedin-media/
